# datawoven

./: .gitignore  .pre-commit-config.yaml  README.md  rag_backup.yml
apps/api/app/: main.py
apps/desktop/src/discovery_assistant/: admin_auth.py  admin_prefs.py  admin_wizard.py  baselogger.py  compile_resources.py  constants.py  main.py  policy_enforcer.py  policy_store.py  policy_utils.py  pyproject.toml  resources.py  resources.qrc  set_password.py  test_database.py  wizard_base.py
apps/desktop/src/discovery_assistant/bootstrap/: fonts.py
apps/desktop/src/discovery_assistant/core/: progress_tracker.py
apps/desktop/src/discovery_assistant/storage/: __init__.py  app_paths.py  database.py  file_manager.py
apps/desktop/src/discovery_assistant/ui/: bootstrap_splash.py  info_text.py  launch_card.py  main_window.py  preferences_page.py
apps/desktop/src/knowledge_capture/: auto_tab.py  cost_tracker.py  main.py  markdown_dialog.py  markdown_import_tab.py  ocr_tab.py  pdf_tab.py  post_processing_tab.py  preview.md  project_selector.py  pyproject.toml  test_web_crawler.py  text_input_tab.py  web_scraping_tab.py  website_tree_crawler.py
apps/desktop/src/knowledge_capture/ui/pain_points/: pain_points.md
apps/services/: pyproject.toml
apps/services/app/: containers.py
apps/web/company-website/: .prettierrc  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
apps/web/company-website/src/: middleware.ts
apps/web/company-website/src/app/: layout.tsx  page.tsx
tests/aws/: helloBoto.py
tests/unit/: example_unit_test.py
(+62 files in other folders)
