[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-capture"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.0.0",
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["knowledge_capture*"]
